# situational-picture

./: .env.example  .gitignore  README.md  app.js  pyproject.toml
api/: coarsen.py  control.py  deps.py  geo_phrase.py  main.py  places.py  queries.py
api/routers/: admin.py  areas.py  cells.py  control.py  events.py  labeling.py  layers.py  review.py
api/tests/: test_area_ref.py  test_coarsen.py  test_geo_context_phrase.py
assess/: anomaly.py  attention.py  config.py  db.py  exposure.py  gaps.py  run.py  significance.py
assess/tests/: test_assess.py  test_attention.py  test_exposure_builtup.py  test_recency_rebalance.py
config/: api.yaml  assessment.yaml  coarsening.yaml  control_ua_donbas.json  embedding.yaml  feeds.yaml  grid.yaml  layer_sources.yaml  llm.yaml  places_black_sea.json  places_ua_donbas.json  runtime.yaml  sources.yaml  taxonomy.yaml  theaters.yaml  thresholds.yaml  ttls.yaml  weights.yaml
data/: healthz.json  theaters.json
data/aoi/: 3-read.json  3.json  4-read.json  4.json
data/black_sea/: aois.json  events.json  insights.json  rejections.json  verify-queue.json  watch.json
data/cell/: 36TVR6021.json  36TVR7639.json  36TVR8517.json  36TVR9596.json  36TVS4507.json  36TVS4713.json  36TVS5305.json  36TVS6511.json  36TVS6816.json  36TVS7325.json  36TVS8208.json  36TVS9206.json  36TVS9306.json  36TWQ3036.json  (+312 more)
db/: roles.sql
eval/: README.md  build_fixtures.py  conftest.py  fixtures_io.py  harness.py  metrics.py  snapshot.py  unosat.py  validate_optical.py  validate_sar.py  validate_vessels.py
fusion/: __init__.py  adjudicate.py  block.py  config.py  db.py  fuse.py  geo.py  graph.py  propagate.py  replay.py  run.py  score.py  types.py
geo/: __init__.py  admin_load.py  aoi.py  context.py  control.py  db.py  feature_load.py  load_substrate.py  terrain.py
grid/: __init__.py  admin_link.py  builder.py  cli.py  local_seq.py  mgrs_1km.py  resolver.py  types.py
ingest/: bus.py  contract.py  embedding.py  pipeline.py  run.py  seed_incidents.py  ucdp_history.py  unosat_history.py
llm/: __init__.py  backend.py  cache.py  circuit_breaker.py  config.py  runlog.py  schema.py
scripts/: build_demo.sh  export_static.py  fetch_admin.sh  fetch_features.sh  fetch_geography.sh  fetch_ucdp_donbas.sh  filter_ucdp.py  populate_geography.py  run_api.sh
synth/: context.py  llm.py  read.py  run.py  service.py
ui/: api_client.py  app.py
web/: app.js  index.html  styles.css
(+1201 files in other folders)
