[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "osint-cop"
version = "0.1.0"
description = "OSINT Common Operating Picture — Ukraine-first, local/$0, event-sourced"
requires-python = ">=3.11"
dependencies = [
    # Core
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
    "shapely>=2.0",
    # Grid
    "mgrs>=1.4",
    "pyproj>=3.6",
    # Geo / raster
    "rasterio>=1.3",
    "geopandas>=0.14",
    "osmium>=3.7",
    # Embeddings (local, no Ollama needed)
    "sentence-transformers>=2.7",
    # Fusion
    "numpy>=1.26",
    # LLM / API
    "httpx>=0.27",
    "pydantic>=2.6",
    # Eval
    "pytest>=8.0",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    # UI
    "streamlit>=1.35",
    "pydeck>=0.9",
    # NATS
    "nats-py>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["grid/tests", "geo/tests", "fusion/tests", "eval"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
