[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-cop"
version = "0.1.0"
description = "OSINT Common Operating Picture — Ukraine-first, local/$0, event-sourced"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "shapely>=2.0",
    "numpy>=1.26",
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Minimal: offline tests only (no GDAL, no DB, no Ollama)
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mgrs>=1.4",
    "pyproj>=3.6",
]
# Full: everything needed to run the full stack
full = [
    "psycopg2-binary>=2.9",
    "mgrs>=1.4",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "osmium>=3.7",
    "pyrosm>=0.6",
    "sentence-transformers>=2.7",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.35",
    "pydeck>=0.9",
    "nats-py>=2.6",
    "earthengine-api>=0.1.390",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["grid/tests", "geo/tests", "fusion/tests", "eval", "ingest/tests", "ingest/imagery/tests", "api/tests", "assess/tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
